<resources>
    <string name="app_name">WeatherApp</string>
    <string name="favorite_indicator">favorite indicator</string>
    <string name="location_name">location name</string>
    <string name="location_lon">location lon</string>
    <string name="location_lat">location lat</string>
    <string name="weather_api_key">2fe9cf00af6efdea412a4e7ba7617a04</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="step3title">Is it favorite?</string>
    <string name="step1title">Enter location name</string>
    <string name="step2title">Choose place</string>
    <string name="step2location">Location</string>
    <string name="step2choose">Choose</string>
    <string name="alocations_title">Locations</string>
    <string name="alocations_frag1title">All locations</string>
    <string name="alocations_frag2title">Liked locations</string>
    <string name="delete_dialog_title">Warning</string>
    <string name="delete_dialog_message">Delete this location?</string>
    <string name="stepperHint">Enter location name</string>
    <string name="windN">northerly</string>
    <string name="windNW">north westerly</string>
    <string name="windW">westerly</string>
    <string name="windSW">south westerly</string>
    <string name="windS">southerly</string>
    <string name="windSE">south easterly</string>
    <string name="windE">easterly</string>
    <string name="windNE">north easterly</string>
    <string name="windTitle">wind</string>
    <string name="windSpeed">m/s</string>
    <string name="pressureTitle">pressure</string>
    <string name="pressureM">mmHg</string>
    <string name="humidityTitle">humidity</string>
    <string name="morning">morning</string>
    <string name="day">day</string>
    <string name="evening">evening</string>
    <string name="night">night</string>
    <string name="stepperException">Something went wrong. Maybe you want to add a location with already used coordinates?</string>
    <string name="change_language">Change language</string>
    <string name="internet_info">No internet connection</string>

</resources>
