<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <moe.feng.common.stepperview.VerticalStepperItemView
                android:id="@+id/stepper_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:step_index="1"
                app:step_title="@string/step1title"
                app:step_state="selected">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_loc_name"
                        android:layout_width="185dp"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"
                        android:imeOptions="actionDone"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button_next_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/material_blue_500"
                            android:textColor="@android:color/white"
                            android:text="@string/ok"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/cancel"/>

                    </LinearLayout>

                </LinearLayout>

            </moe.feng.common.stepperview.VerticalStepperItemView>

            <moe.feng.common.stepperview.VerticalStepperItemView
                android:id="@+id/stepper_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:step_index="2"
                app:step_title="@string/step2title">

                <LinearLayout
                    android:id="@+id/ll_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <fragment
                        android:id="@+id/map_fragment"
                        class="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="220dp" />



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/new_loc_position"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/step2location"/>

                        <ImageView
                            android:visibility="gone"
                            android:id="@+id/new_loc_ready"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_done" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/choose_loc_button"
                        android:text="@string/step2choose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button_next_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/material_blue_500"
                            android:textColor="@android:color/white"
                            android:text="@string/ok"/>

                        <Button
                            android:id="@+id/button_prev_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/cancel"/>

                    </LinearLayout>



                </LinearLayout>

            </moe.feng.common.stepperview.VerticalStepperItemView>

            <moe.feng.common.stepperview.VerticalStepperItemView
                android:id="@+id/stepper_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:step_index="3"
                app:step_title="@string/step3title"
                app:step_is_last="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/add_is_fav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button_next_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/material_blue_500"
                            android:textColor="@android:color/white"
                            android:text="@string/ok"/>

                        <Button
                            android:id="@+id/button_prev_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/cancel"/>

                    </LinearLayout>

                </LinearLayout>

            </moe.feng.common.stepperview.VerticalStepperItemView>



        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>